# debt-radar

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  DEVPOST.md  Dockerfile  README.md  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: debtradar.yml
.kiro/specs/windows-security-fixes/: .config.kiro  bugfix.md  design.md  tasks.md
backend/: Dockerfile  calibrate_scoring.py  cli.py  main.py  requirements.txt  start_server.py
backend/analyzer/: dependency_graph.py  git_blame.py  git_history.py  metrics.py  orchestrator.py  recommendations.py  scan_diff.py  scanner.py
backend/api/: routes.py  schemas.py
backend/parsers/: ast_analyzer.py  parser_pool.py  regex_patterns.py
backend/templates/: report.html
backend/tests/: test_dependency_graph.py  test_recommendations.py  test_scan_diff.py
backend/utils/: badges.py  git_utils.py  history_db.py  llm_client.py  path_security.py  report_generator.py
docs/superpowers/plans/: 2026-07-19-priority-recommendation-engine.md  2026-07-19-remaining-features-roadmap.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ActionPlan.jsx  BlameChart.jsx  CodeViewer.jsx  Dashboard.integration.test.jsx  Dashboard.jsx  DependencyGraph.jsx  DependencyGraph.test.jsx  EmptyStates.jsx  ErrorBoundary.jsx  FeedbackWidget.jsx  FeedbackWidget.test.jsx  FileDropZone.jsx  GitTabs.jsx  HallOfShame.jsx  (+12 more)
(+23 files in other folders)
