[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "debt-radar"
version = "1.0.0"
description = "📡 Auditor forense de salud de código y deuda técnica"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pathspec>=0.12.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
debtradar = "cli:app"

[tool.setuptools.packages.find]
include = ["backend*"]
